<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pointOfInterestPhoto"
        android:layout_centerHorizontal="true"
        android:src="@drawable/historia_banner"
        android:paddingTop="60dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/pointOfInterestPhoto"
        android:paddingTop="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:paddingBottom="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/info"
                    android:id="@+id/tv"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/info1"
                    android:id="@+id/tv1"
                    android:paddingTop="10dp"
                    android:layout_below="@+id/tv" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/info2"
                    android:id="@+id/tv2"
                    android:paddingTop="10dp"
                    android:layout_below="@+id/tv1" />/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/info3"
                    android:id="@+id/tv3"
                    android:paddingTop="10dp"
                    android:layout_below="@+id/tv2" />/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/info4"
                    android:id="@+id/tv4"
                    android:paddingTop="10dp"
                    android:layout_below="@+id/tv3" />/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/info5"
                    android:id="@+id/tv5"
                    android:paddingTop="10dp"
                    android:layout_below="@+id/tv4" />/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/info6"
                    android:id="@+id/tv6"
                    android:paddingTop="10dp"
                    android:layout_below="@+id/tv5" />/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/info7"
                    android:id="@+id/tv7"
                    android:paddingTop="10dp"
                    android:layout_below="@+id/tv6" />/>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>


</RelativeLayout>